--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-clean": "~0.4.1",
     "grunt-closure-compiler": "~0.0.19",
     "grunt-contrib-stylus": "~0.7.0",
-    "grunt-contrib-cssmin": "~0.6.1"
+    "grunt-contrib-cssmin": "~0.6.1",
+    "assemble": "~0.4.4"
   }
 }
