--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-closure-compiler": "~0.0.19",
     "grunt-contrib-stylus": "~0.7.0",
     "grunt-contrib-cssmin": "~0.6.1",
-    "assemble": "~0.4.4"
+    "assemble": "~0.4.4",
+    "grunt-contrib-symlink": "~0.2.0"
   }
 }
