Update assemble to grunt-assemble

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-assemble": "~0.6.3",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-jshint": "~0.5.2",
@@ -11,7 +12,6 @@
     "grunt-closure-compiler": "~0.0.19",
     "grunt-contrib-stylus": "~0.7.0",
     "grunt-contrib-cssmin": "~0.6.1",
-    "assemble": "~0.4.4",
     "grunt-contrib-symlink": "~0.2.0"
   }
 }
